@@ -1,0 +1,24 @@
+\name{startDynamicHelp}
+\alias{startDynamicHelp}
+\title{
+Start the dynamic HTML help system
+}
+\description{
+This function starts the internal help server, so that HTML help pages
+are rendered when requested.
+}
+\usage{
+startDynamicHelp()
+}
+\details{
+This function starts the internal HTTPD server.  It attempts to start it
+on port 8080, but will try subsequent ports if that one is in use.  It also sets
+option(htmlhelp=TRUE).
+}
+\value{
+The chosen port is returned invisibly.
+}
+\seealso{
+\code{\link{Rd2HTML}} is used to render the man pages.
+}
+\keyword{ documentation }
