@@ -277,6 +277,11 @@ Rd HELP FILE CHANGES
     o	parse_Rd() was incorrectly handling multiple backslashes in
     	R code strings, converting 4n+3 backslashes to 2n+1 instead
     	of 2n+2.
+    	
+    o 	A new dynamic help system may be started using
+	tools::startDynamicHelp().  With this option, HTML help pages
+	will be generated on request, resolving links by searching
+	through all installed packages.
 
 
 DEPRECATED & DEFUNCT
